--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "debug": "node-debug app.js"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -11,6 +12,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
