--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.1",
     "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "sha256": "^0.2.0"
   }
 }
