Modified to include a new route for authentication and added jwt to package.json

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "debug": "node-debug app.js",
     "installDB": "node ./db_seed/install_db.js"
   },
@@ -13,8 +13,10 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.12",
     "morgan": "~1.6.1",
+    "nodemon": "^1.9.1",
     "serve-favicon": "~2.3.0",
     "sha256": "^0.2.0"
   }
